Eevee: SSR not working in AMD #52713

Closed
opened 2017-09-12 17:49:15 +02:00 by Dalai Felinto · 4 comments

System Information
Linux, Mesa ('Gallium 0.4 on AMD POLARIS10 (DRM 3.9.0 / 4.10.0-33-generic, LLVM 4.0.0)')
AMD Radeon Pro WX 7100

Short description of error
SSR never fully worked in my system.

Exact steps for others to reproduce the error

Open:
ssr.blend

This is what I get:
Screenshot from 2017-09-12 17-46-45.png

Funny enough, the first time I saved the time, once I got back from the file browser the reflection was correct.

**System Information** Linux, Mesa ('Gallium 0.4 on AMD POLARIS10 (DRM 3.9.0 / 4.10.0-33-generic, LLVM 4.0.0)') AMD Radeon Pro WX 7100 **Short description of error** SSR never fully worked in my system. **Exact steps for others to reproduce the error** Open: [ssr.blend](https://archive.blender.org/developer/F791798/ssr.blend) This is what I get: ![Screenshot from 2017-09-12 17-46-45.png](https://archive.blender.org/developer/F791808/Screenshot_from_2017-09-12_17-46-45.png) Funny enough, the first time I saved the time, once I got back from the file browser the reflection was correct.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Clément Foucault was assigned by Dalai Felinto 2017-09-12 17:50:59 +02:00

This issue was referenced by 8a5af5202c

This issue was referenced by 8a5af5202c51e29284a03245d7331a4f2fe6d08f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52713
No description provided.